y.output
Non-terminaux inutiles dans la grammaire

    Parametre


Terminaux inutilisés dans la grammaire

    tCONST
    tPRINTF
    tWHILE
    tERROR


Règles inutiles dans la grammaire

   56 Parametre: tID
   57          | tNB


État 61 conflits: 9 réduction/réduction
État 62 conflits: 9 réduction/réduction
État 65 conflits: 9 réduction/réduction


Grammaire

    0 $accept: Programme $end

    1 Programme: Fonctions

    2 Fonctions: Fonctions Main
    3          | Main
    4          | Fonctions Fonction
    5          | Fonction

    6 Fonction: tINT tID tPO ArgumentsDeclaration tPF tAO BodyRet tAF
    7         | tVOID tID tPO ArgumentsDeclaration tPF tAO Body tAF

    8 ArgumentsDeclaration: %empty
    9                     | ListeArgumentsDeclaration

   10 ListeArgumentsDeclaration: tINT tID
   11                          | tINT tID tV ListeArgumentsDeclaration

   12 Main: tINT tMAIN tPO tPF tAO BodyRet tAF
   13     | tVOID tMAIN tPO tPF tAO Body tAF

   14 Valeur: tID
   15       | tNB
   16       | Calcul
   17       | AppelFonction

   18 BodyRet: Body tRETURN Valeur tFI

   19 Body: %empty
   20     | Declaration Body
   21     | Initialisation Body
   22     | Affectation Body
   23     | BrancheIf Body
   24     | AppelFonction tFI Body

   25 Declaration: tINT tID tFI

   26 Initialisation: tINT tID tEGAL Valeur tFI

   27 Affectation: tID tEGAL Valeur tFI

   28 BrancheIf: tIF tPO Condition tPF tAO Body tAF BranchesElseif BrancheElse

   29 Condition: Valeur Comparateur Valeur
   30          | Valeur

   31 Comparateur: tEGAL
   32            | tINF
   33            | tSUP
   34            | tINFEGAL
   35            | tSUPEGAL
   36            | tDIF

   37 BrancheElse: %empty
   38            | tELSE tAO Body tAF

   39 BranchesElseif: %empty
   40               | tELSEIF tPO Condition tPF tAO Body tAF BranchesElseif

   41 AppelFonction: tID tPO Arguments tPF

   42 Arguments: %empty
   43          | ListeArguments

   44 ListeArguments: Valeur
   45               | Valeur tV ListeArguments

   46 Calcul: Calcul tADD DivMul
   47       | Calcul tSOU DivMul
   48       | DivMul

   49 DivMul: DivMul tMUL Terme
   50       | DivMul tDIV Terme
   51       | Terme

   52 Terme: tPO Calcul tPF
   53      | tID
   54      | tNB
   55      | AppelFonction


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    tMAIN (258) 12 13
    tAO (259) 6 7 12 13 28 38 40
    tAF (260) 6 7 12 13 28 38 40
    tCONST (261)
    tINT (262) 6 10 11 12 25 26
    tEGAL (263) 26 27 31
    tSOU (264) 47
    tADD (265) 46
    tMUL (266) 49
    tDIV (267) 50
    tPO (268) 6 7 12 13 28 40 41 52
    tPF (269) 6 7 12 13 28 40 41 52
    tV (270) 11 45
    tFI (271) 18 24 25 26 27
    tPRINTF (272)
    tIF (273) 28
    tELSE (274) 38
    tWHILE (275)
    tERROR (276)
    tRETURN (277) 18
    tVOID (278) 7 13
    tINF (279) 32
    tSUP (280) 33
    tSUPEGAL (281) 35
    tINFEGAL (282) 34
    tDIF (283) 36
    tELSEIF (284) 40
    tNB <nb> (285) 15 54
    tID <var> (286) 6 7 10 11 14 25 26 27 41 53


Non-terminaux, suivis des règles où ils apparaissent

    $accept (32)
        à gauche: 0
    Programme (33)
        à gauche: 1
        à droite: 0
    Fonctions (34)
        à gauche: 2 3 4 5
        à droite: 1 2 4
    Fonction (35)
        à gauche: 6 7
        à droite: 4 5
    ArgumentsDeclaration (36)
        à gauche: 8 9
        à droite: 6 7
    ListeArgumentsDeclaration (37)
        à gauche: 10 11
        à droite: 9 11
    Main (38)
        à gauche: 12 13
        à droite: 2 3
    Valeur <nb> (39)
        à gauche: 14 15 16 17
        à droite: 18 26 27 29 30 44 45
    BodyRet (40)
        à gauche: 18
        à droite: 6 12
    Body (41)
        à gauche: 19 20 21 22 23 24
        à droite: 7 13 18 20 21 22 23 24 28 38 40
    Declaration (42)
        à gauche: 25
        à droite: 20
    Initialisation (43)
        à gauche: 26
        à droite: 21
    Affectation (44)
        à gauche: 27
        à droite: 22
    BrancheIf (45)
        à gauche: 28
        à droite: 23
    Condition (46)
        à gauche: 29 30
        à droite: 28 40
    Comparateur (47)
        à gauche: 31 32 33 34 35 36
        à droite: 29
    BrancheElse (48)
        à gauche: 37 38
        à droite: 28
    BranchesElseif (49)
        à gauche: 39 40
        à droite: 28 40
    AppelFonction (50)
        à gauche: 41
        à droite: 17 24 55
    Arguments (51)
        à gauche: 42 43
        à droite: 41
    ListeArguments (52)
        à gauche: 44 45
        à droite: 43 45
    Calcul <nb> (53)
        à gauche: 46 47 48
        à droite: 16 46 47 52
    DivMul <nb> (54)
        à gauche: 49 50 51
        à droite: 46 47 48 49 50
    Terme <nb> (55)
        à gauche: 52 53 54 55
        à droite: 49 50 51


État 0

    0 $accept: . Programme $end

    tINT   décalage et aller à l'état 1
    tVOID  décalage et aller à l'état 2

    Programme  aller à l'état 3
    Fonctions  aller à l'état 4
    Fonction   aller à l'état 5
    Main       aller à l'état 6


État 1

    6 Fonction: tINT . tID tPO ArgumentsDeclaration tPF tAO BodyRet tAF
   12 Main: tINT . tMAIN tPO tPF tAO BodyRet tAF

    tMAIN  décalage et aller à l'état 7
    tID    décalage et aller à l'état 8


État 2

    7 Fonction: tVOID . tID tPO ArgumentsDeclaration tPF tAO Body tAF
   13 Main: tVOID . tMAIN tPO tPF tAO Body tAF

    tMAIN  décalage et aller à l'état 9
    tID    décalage et aller à l'état 10


État 3

    0 $accept: Programme . $end

    $end  décalage et aller à l'état 11


État 4

    1 Programme: Fonctions .
    2 Fonctions: Fonctions . Main
    4          | Fonctions . Fonction

    tINT   décalage et aller à l'état 1
    tVOID  décalage et aller à l'état 2

    $défaut  réduction par utilisation de la règle 1 (Programme)

    Fonction  aller à l'état 12
    Main      aller à l'état 13


État 5

    5 Fonctions: Fonction .

    $défaut  réduction par utilisation de la règle 5 (Fonctions)


État 6

    3 Fonctions: Main .

    $défaut  réduction par utilisation de la règle 3 (Fonctions)


État 7

   12 Main: tINT tMAIN . tPO tPF tAO BodyRet tAF

    tPO  décalage et aller à l'état 14


État 8

    6 Fonction: tINT tID . tPO ArgumentsDeclaration tPF tAO BodyRet tAF

    tPO  décalage et aller à l'état 15


État 9

   13 Main: tVOID tMAIN . tPO tPF tAO Body tAF

    tPO  décalage et aller à l'état 16


État 10

    7 Fonction: tVOID tID . tPO ArgumentsDeclaration tPF tAO Body tAF

    tPO  décalage et aller à l'état 17


État 11

    0 $accept: Programme $end .

    $défaut  accepter


État 12

    4 Fonctions: Fonctions Fonction .

    $défaut  réduction par utilisation de la règle 4 (Fonctions)


État 13

    2 Fonctions: Fonctions Main .

    $défaut  réduction par utilisation de la règle 2 (Fonctions)


État 14

   12 Main: tINT tMAIN tPO . tPF tAO BodyRet tAF

    tPF  décalage et aller à l'état 18


État 15

    6 Fonction: tINT tID tPO . ArgumentsDeclaration tPF tAO BodyRet tAF

    tINT  décalage et aller à l'état 19

    $défaut  réduction par utilisation de la règle 8 (ArgumentsDeclaration)

    ArgumentsDeclaration       aller à l'état 20
    ListeArgumentsDeclaration  aller à l'état 21


État 16

   13 Main: tVOID tMAIN tPO . tPF tAO Body tAF

    tPF  décalage et aller à l'état 22


État 17

    7 Fonction: tVOID tID tPO . ArgumentsDeclaration tPF tAO Body tAF

    tINT  décalage et aller à l'état 19

    $défaut  réduction par utilisation de la règle 8 (ArgumentsDeclaration)

    ArgumentsDeclaration       aller à l'état 23
    ListeArgumentsDeclaration  aller à l'état 21


État 18

   12 Main: tINT tMAIN tPO tPF . tAO BodyRet tAF

    tAO  décalage et aller à l'état 24


État 19

   10 ListeArgumentsDeclaration: tINT . tID
   11                          | tINT . tID tV ListeArgumentsDeclaration

    tID  décalage et aller à l'état 25


État 20

    6 Fonction: tINT tID tPO ArgumentsDeclaration . tPF tAO BodyRet tAF

    tPF  décalage et aller à l'état 26


État 21

    9 ArgumentsDeclaration: ListeArgumentsDeclaration .

    $défaut  réduction par utilisation de la règle 9 (ArgumentsDeclaration)


État 22

   13 Main: tVOID tMAIN tPO tPF . tAO Body tAF

    tAO  décalage et aller à l'état 27


État 23

    7 Fonction: tVOID tID tPO ArgumentsDeclaration . tPF tAO Body tAF

    tPF  décalage et aller à l'état 28


État 24

   12 Main: tINT tMAIN tPO tPF tAO . BodyRet tAF

    tINT  décalage et aller à l'état 29
    tIF   décalage et aller à l'état 30
    tID   décalage et aller à l'état 31

    $défaut  réduction par utilisation de la règle 19 (Body)

    BodyRet         aller à l'état 32
    Body            aller à l'état 33
    Declaration     aller à l'état 34
    Initialisation  aller à l'état 35
    Affectation     aller à l'état 36
    BrancheIf       aller à l'état 37
    AppelFonction   aller à l'état 38


État 25

   10 ListeArgumentsDeclaration: tINT tID .
   11                          | tINT tID . tV ListeArgumentsDeclaration

    tV  décalage et aller à l'état 39

    $défaut  réduction par utilisation de la règle 10 (ListeArgumentsDeclaration)


État 26

    6 Fonction: tINT tID tPO ArgumentsDeclaration tPF . tAO BodyRet tAF

    tAO  décalage et aller à l'état 40


État 27

   13 Main: tVOID tMAIN tPO tPF tAO . Body tAF

    tINT  décalage et aller à l'état 29
    tIF   décalage et aller à l'état 30
    tID   décalage et aller à l'état 31

    $défaut  réduction par utilisation de la règle 19 (Body)

    Body            aller à l'état 41
    Declaration     aller à l'état 34
    Initialisation  aller à l'état 35
    Affectation     aller à l'état 36
    BrancheIf       aller à l'état 37
    AppelFonction   aller à l'état 38


État 28

    7 Fonction: tVOID tID tPO ArgumentsDeclaration tPF . tAO Body tAF

    tAO  décalage et aller à l'état 42


État 29

   25 Declaration: tINT . tID tFI
   26 Initialisation: tINT . tID tEGAL Valeur tFI

    tID  décalage et aller à l'état 43


État 30

   28 BrancheIf: tIF . tPO Condition tPF tAO Body tAF BranchesElseif BrancheElse

    tPO  décalage et aller à l'état 44


État 31

   27 Affectation: tID . tEGAL Valeur tFI
   41 AppelFonction: tID . tPO Arguments tPF

    tEGAL  décalage et aller à l'état 45
    tPO    décalage et aller à l'état 46


État 32

   12 Main: tINT tMAIN tPO tPF tAO BodyRet . tAF

    tAF  décalage et aller à l'état 47


État 33

   18 BodyRet: Body . tRETURN Valeur tFI

    tRETURN  décalage et aller à l'état 48


État 34

   20 Body: Declaration . Body

    tINT  décalage et aller à l'état 29
    tIF   décalage et aller à l'état 30
    tID   décalage et aller à l'état 31

    $défaut  réduction par utilisation de la règle 19 (Body)

    Body            aller à l'état 49
    Declaration     aller à l'état 34
    Initialisation  aller à l'état 35
    Affectation     aller à l'état 36
    BrancheIf       aller à l'état 37
    AppelFonction   aller à l'état 38


État 35

   21 Body: Initialisation . Body

    tINT  décalage et aller à l'état 29
    tIF   décalage et aller à l'état 30
    tID   décalage et aller à l'état 31

    $défaut  réduction par utilisation de la règle 19 (Body)

    Body            aller à l'état 50
    Declaration     aller à l'état 34
    Initialisation  aller à l'état 35
    Affectation     aller à l'état 36
    BrancheIf       aller à l'état 37
    AppelFonction   aller à l'état 38


État 36

   22 Body: Affectation . Body

    tINT  décalage et aller à l'état 29
    tIF   décalage et aller à l'état 30
    tID   décalage et aller à l'état 31

    $défaut  réduction par utilisation de la règle 19 (Body)

    Body            aller à l'état 51
    Declaration     aller à l'état 34
    Initialisation  aller à l'état 35
    Affectation     aller à l'état 36
    BrancheIf       aller à l'état 37
    AppelFonction   aller à l'état 38


État 37

   23 Body: BrancheIf . Body

    tINT  décalage et aller à l'état 29
    tIF   décalage et aller à l'état 30
    tID   décalage et aller à l'état 31

    $défaut  réduction par utilisation de la règle 19 (Body)

    Body            aller à l'état 52
    Declaration     aller à l'état 34
    Initialisation  aller à l'état 35
    Affectation     aller à l'état 36
    BrancheIf       aller à l'état 37
    AppelFonction   aller à l'état 38


État 38

   24 Body: AppelFonction . tFI Body

    tFI  décalage et aller à l'état 53


État 39

   11 ListeArgumentsDeclaration: tINT tID tV . ListeArgumentsDeclaration

    tINT  décalage et aller à l'état 19

    ListeArgumentsDeclaration  aller à l'état 54


État 40

    6 Fonction: tINT tID tPO ArgumentsDeclaration tPF tAO . BodyRet tAF

    tINT  décalage et aller à l'état 29
    tIF   décalage et aller à l'état 30
    tID   décalage et aller à l'état 31

    $défaut  réduction par utilisation de la règle 19 (Body)

    BodyRet         aller à l'état 55
    Body            aller à l'état 33
    Declaration     aller à l'état 34
    Initialisation  aller à l'état 35
    Affectation     aller à l'état 36
    BrancheIf       aller à l'état 37
    AppelFonction   aller à l'état 38


État 41

   13 Main: tVOID tMAIN tPO tPF tAO Body . tAF

    tAF  décalage et aller à l'état 56


État 42

    7 Fonction: tVOID tID tPO ArgumentsDeclaration tPF tAO . Body tAF

    tINT  décalage et aller à l'état 29
    tIF   décalage et aller à l'état 30
    tID   décalage et aller à l'état 31

    $défaut  réduction par utilisation de la règle 19 (Body)

    Body            aller à l'état 57
    Declaration     aller à l'état 34
    Initialisation  aller à l'état 35
    Affectation     aller à l'état 36
    BrancheIf       aller à l'état 37
    AppelFonction   aller à l'état 38


État 43

   25 Declaration: tINT tID . tFI
   26 Initialisation: tINT tID . tEGAL Valeur tFI

    tEGAL  décalage et aller à l'état 58
    tFI    décalage et aller à l'état 59


État 44

   28 BrancheIf: tIF tPO . Condition tPF tAO Body tAF BranchesElseif BrancheElse

    tPO  décalage et aller à l'état 60
    tNB  décalage et aller à l'état 61
    tID  décalage et aller à l'état 62

    Valeur         aller à l'état 63
    Condition      aller à l'état 64
    AppelFonction  aller à l'état 65
    Calcul         aller à l'état 66
    DivMul         aller à l'état 67
    Terme          aller à l'état 68


État 45

   27 Affectation: tID tEGAL . Valeur tFI

    tPO  décalage et aller à l'état 60
    tNB  décalage et aller à l'état 61
    tID  décalage et aller à l'état 62

    Valeur         aller à l'état 69
    AppelFonction  aller à l'état 65
    Calcul         aller à l'état 66
    DivMul         aller à l'état 67
    Terme          aller à l'état 68


État 46

   41 AppelFonction: tID tPO . Arguments tPF

    tPO  décalage et aller à l'état 60
    tNB  décalage et aller à l'état 61
    tID  décalage et aller à l'état 62

    $défaut  réduction par utilisation de la règle 42 (Arguments)

    Valeur          aller à l'état 70
    AppelFonction   aller à l'état 65
    Arguments       aller à l'état 71
    ListeArguments  aller à l'état 72
    Calcul          aller à l'état 66
    DivMul          aller à l'état 67
    Terme           aller à l'état 68


État 47

   12 Main: tINT tMAIN tPO tPF tAO BodyRet tAF .

    $défaut  réduction par utilisation de la règle 12 (Main)


État 48

   18 BodyRet: Body tRETURN . Valeur tFI

    tPO  décalage et aller à l'état 60
    tNB  décalage et aller à l'état 61
    tID  décalage et aller à l'état 62

    Valeur         aller à l'état 73
    AppelFonction  aller à l'état 65
    Calcul         aller à l'état 66
    DivMul         aller à l'état 67
    Terme          aller à l'état 68


État 49

   20 Body: Declaration Body .

    $défaut  réduction par utilisation de la règle 20 (Body)


État 50

   21 Body: Initialisation Body .

    $défaut  réduction par utilisation de la règle 21 (Body)


État 51

   22 Body: Affectation Body .

    $défaut  réduction par utilisation de la règle 22 (Body)


État 52

   23 Body: BrancheIf Body .

    $défaut  réduction par utilisation de la règle 23 (Body)


État 53

   24 Body: AppelFonction tFI . Body

    tINT  décalage et aller à l'état 29
    tIF   décalage et aller à l'état 30
    tID   décalage et aller à l'état 31

    $défaut  réduction par utilisation de la règle 19 (Body)

    Body            aller à l'état 74
    Declaration     aller à l'état 34
    Initialisation  aller à l'état 35
    Affectation     aller à l'état 36
    BrancheIf       aller à l'état 37
    AppelFonction   aller à l'état 38


État 54

   11 ListeArgumentsDeclaration: tINT tID tV ListeArgumentsDeclaration .

    $défaut  réduction par utilisation de la règle 11 (ListeArgumentsDeclaration)


État 55

    6 Fonction: tINT tID tPO ArgumentsDeclaration tPF tAO BodyRet . tAF

    tAF  décalage et aller à l'état 75


État 56

   13 Main: tVOID tMAIN tPO tPF tAO Body tAF .

    $défaut  réduction par utilisation de la règle 13 (Main)


État 57

    7 Fonction: tVOID tID tPO ArgumentsDeclaration tPF tAO Body . tAF

    tAF  décalage et aller à l'état 76


État 58

   26 Initialisation: tINT tID tEGAL . Valeur tFI

    tPO  décalage et aller à l'état 60
    tNB  décalage et aller à l'état 61
    tID  décalage et aller à l'état 62

    Valeur         aller à l'état 77
    AppelFonction  aller à l'état 65
    Calcul         aller à l'état 66
    DivMul         aller à l'état 67
    Terme          aller à l'état 68


État 59

   25 Declaration: tINT tID tFI .

    $défaut  réduction par utilisation de la règle 25 (Declaration)


État 60

   52 Terme: tPO . Calcul tPF

    tPO  décalage et aller à l'état 60
    tNB  décalage et aller à l'état 78
    tID  décalage et aller à l'état 79

    AppelFonction  aller à l'état 80
    Calcul         aller à l'état 81
    DivMul         aller à l'état 67
    Terme          aller à l'état 68


État 61

   15 Valeur: tNB .
   54 Terme: tNB .

    tEGAL     réduction par utilisation de la règle 15 (Valeur)
    tEGAL     [réduction par utilisation de la règle 54 (Terme)]
    tSOU      réduction par utilisation de la règle 54 (Terme)
    tADD      réduction par utilisation de la règle 54 (Terme)
    tMUL      réduction par utilisation de la règle 54 (Terme)
    tDIV      réduction par utilisation de la règle 54 (Terme)
    tPF       réduction par utilisation de la règle 15 (Valeur)
    tPF       [réduction par utilisation de la règle 54 (Terme)]
    tV        réduction par utilisation de la règle 15 (Valeur)
    tV        [réduction par utilisation de la règle 54 (Terme)]
    tFI       réduction par utilisation de la règle 15 (Valeur)
    tFI       [réduction par utilisation de la règle 54 (Terme)]
    tINF      réduction par utilisation de la règle 15 (Valeur)
    tINF      [réduction par utilisation de la règle 54 (Terme)]
    tSUP      réduction par utilisation de la règle 15 (Valeur)
    tSUP      [réduction par utilisation de la règle 54 (Terme)]
    tSUPEGAL  réduction par utilisation de la règle 15 (Valeur)
    tSUPEGAL  [réduction par utilisation de la règle 54 (Terme)]
    tINFEGAL  réduction par utilisation de la règle 15 (Valeur)
    tINFEGAL  [réduction par utilisation de la règle 54 (Terme)]
    tDIF      réduction par utilisation de la règle 15 (Valeur)
    tDIF      [réduction par utilisation de la règle 54 (Terme)]
    $défaut  réduction par utilisation de la règle 15 (Valeur)


État 62

   14 Valeur: tID .
   41 AppelFonction: tID . tPO Arguments tPF
   53 Terme: tID .

    tPO  décalage et aller à l'état 46

    tEGAL     réduction par utilisation de la règle 14 (Valeur)
    tEGAL     [réduction par utilisation de la règle 53 (Terme)]
    tSOU      réduction par utilisation de la règle 53 (Terme)
    tADD      réduction par utilisation de la règle 53 (Terme)
    tMUL      réduction par utilisation de la règle 53 (Terme)
    tDIV      réduction par utilisation de la règle 53 (Terme)
    tPF       réduction par utilisation de la règle 14 (Valeur)
    tPF       [réduction par utilisation de la règle 53 (Terme)]
    tV        réduction par utilisation de la règle 14 (Valeur)
    tV        [réduction par utilisation de la règle 53 (Terme)]
    tFI       réduction par utilisation de la règle 14 (Valeur)
    tFI       [réduction par utilisation de la règle 53 (Terme)]
    tINF      réduction par utilisation de la règle 14 (Valeur)
    tINF      [réduction par utilisation de la règle 53 (Terme)]
    tSUP      réduction par utilisation de la règle 14 (Valeur)
    tSUP      [réduction par utilisation de la règle 53 (Terme)]
    tSUPEGAL  réduction par utilisation de la règle 14 (Valeur)
    tSUPEGAL  [réduction par utilisation de la règle 53 (Terme)]
    tINFEGAL  réduction par utilisation de la règle 14 (Valeur)
    tINFEGAL  [réduction par utilisation de la règle 53 (Terme)]
    tDIF      réduction par utilisation de la règle 14 (Valeur)
    tDIF      [réduction par utilisation de la règle 53 (Terme)]
    $défaut  réduction par utilisation de la règle 14 (Valeur)


État 63

   29 Condition: Valeur . Comparateur Valeur
   30          | Valeur .

    tEGAL     décalage et aller à l'état 82
    tINF      décalage et aller à l'état 83
    tSUP      décalage et aller à l'état 84
    tSUPEGAL  décalage et aller à l'état 85
    tINFEGAL  décalage et aller à l'état 86
    tDIF      décalage et aller à l'état 87

    $défaut  réduction par utilisation de la règle 30 (Condition)

    Comparateur  aller à l'état 88


État 64

   28 BrancheIf: tIF tPO Condition . tPF tAO Body tAF BranchesElseif BrancheElse

    tPF  décalage et aller à l'état 89


État 65

   17 Valeur: AppelFonction .
   55 Terme: AppelFonction .

    tEGAL     réduction par utilisation de la règle 17 (Valeur)
    tEGAL     [réduction par utilisation de la règle 55 (Terme)]
    tSOU      réduction par utilisation de la règle 55 (Terme)
    tADD      réduction par utilisation de la règle 55 (Terme)
    tMUL      réduction par utilisation de la règle 55 (Terme)
    tDIV      réduction par utilisation de la règle 55 (Terme)
    tPF       réduction par utilisation de la règle 17 (Valeur)
    tPF       [réduction par utilisation de la règle 55 (Terme)]
    tV        réduction par utilisation de la règle 17 (Valeur)
    tV        [réduction par utilisation de la règle 55 (Terme)]
    tFI       réduction par utilisation de la règle 17 (Valeur)
    tFI       [réduction par utilisation de la règle 55 (Terme)]
    tINF      réduction par utilisation de la règle 17 (Valeur)
    tINF      [réduction par utilisation de la règle 55 (Terme)]
    tSUP      réduction par utilisation de la règle 17 (Valeur)
    tSUP      [réduction par utilisation de la règle 55 (Terme)]
    tSUPEGAL  réduction par utilisation de la règle 17 (Valeur)
    tSUPEGAL  [réduction par utilisation de la règle 55 (Terme)]
    tINFEGAL  réduction par utilisation de la règle 17 (Valeur)
    tINFEGAL  [réduction par utilisation de la règle 55 (Terme)]
    tDIF      réduction par utilisation de la règle 17 (Valeur)
    tDIF      [réduction par utilisation de la règle 55 (Terme)]
    $défaut  réduction par utilisation de la règle 17 (Valeur)


État 66

   16 Valeur: Calcul .
   46 Calcul: Calcul . tADD DivMul
   47       | Calcul . tSOU DivMul

    tSOU  décalage et aller à l'état 90
    tADD  décalage et aller à l'état 91

    $défaut  réduction par utilisation de la règle 16 (Valeur)


État 67

   48 Calcul: DivMul .
   49 DivMul: DivMul . tMUL Terme
   50       | DivMul . tDIV Terme

    tMUL  décalage et aller à l'état 92
    tDIV  décalage et aller à l'état 93

    $défaut  réduction par utilisation de la règle 48 (Calcul)


État 68

   51 DivMul: Terme .

    $défaut  réduction par utilisation de la règle 51 (DivMul)


État 69

   27 Affectation: tID tEGAL Valeur . tFI

    tFI  décalage et aller à l'état 94


État 70

   44 ListeArguments: Valeur .
   45               | Valeur . tV ListeArguments

    tV  décalage et aller à l'état 95

    $défaut  réduction par utilisation de la règle 44 (ListeArguments)


État 71

   41 AppelFonction: tID tPO Arguments . tPF

    tPF  décalage et aller à l'état 96


État 72

   43 Arguments: ListeArguments .

    $défaut  réduction par utilisation de la règle 43 (Arguments)


État 73

   18 BodyRet: Body tRETURN Valeur . tFI

    tFI  décalage et aller à l'état 97


État 74

   24 Body: AppelFonction tFI Body .

    $défaut  réduction par utilisation de la règle 24 (Body)


État 75

    6 Fonction: tINT tID tPO ArgumentsDeclaration tPF tAO BodyRet tAF .

    $défaut  réduction par utilisation de la règle 6 (Fonction)


État 76

    7 Fonction: tVOID tID tPO ArgumentsDeclaration tPF tAO Body tAF .

    $défaut  réduction par utilisation de la règle 7 (Fonction)


État 77

   26 Initialisation: tINT tID tEGAL Valeur . tFI

    tFI  décalage et aller à l'état 98


État 78

   54 Terme: tNB .

    $défaut  réduction par utilisation de la règle 54 (Terme)


État 79

   41 AppelFonction: tID . tPO Arguments tPF
   53 Terme: tID .

    tPO  décalage et aller à l'état 46

    $défaut  réduction par utilisation de la règle 53 (Terme)


État 80

   55 Terme: AppelFonction .

    $défaut  réduction par utilisation de la règle 55 (Terme)


État 81

   46 Calcul: Calcul . tADD DivMul
   47       | Calcul . tSOU DivMul
   52 Terme: tPO Calcul . tPF

    tSOU  décalage et aller à l'état 90
    tADD  décalage et aller à l'état 91
    tPF   décalage et aller à l'état 99


État 82

   31 Comparateur: tEGAL .

    $défaut  réduction par utilisation de la règle 31 (Comparateur)


État 83

   32 Comparateur: tINF .

    $défaut  réduction par utilisation de la règle 32 (Comparateur)


État 84

   33 Comparateur: tSUP .

    $défaut  réduction par utilisation de la règle 33 (Comparateur)


État 85

   35 Comparateur: tSUPEGAL .

    $défaut  réduction par utilisation de la règle 35 (Comparateur)


État 86

   34 Comparateur: tINFEGAL .

    $défaut  réduction par utilisation de la règle 34 (Comparateur)


État 87

   36 Comparateur: tDIF .

    $défaut  réduction par utilisation de la règle 36 (Comparateur)


État 88

   29 Condition: Valeur Comparateur . Valeur

    tPO  décalage et aller à l'état 60
    tNB  décalage et aller à l'état 61
    tID  décalage et aller à l'état 62

    Valeur         aller à l'état 100
    AppelFonction  aller à l'état 65
    Calcul         aller à l'état 66
    DivMul         aller à l'état 67
    Terme          aller à l'état 68


État 89

   28 BrancheIf: tIF tPO Condition tPF . tAO Body tAF BranchesElseif BrancheElse

    tAO  décalage et aller à l'état 101


État 90

   47 Calcul: Calcul tSOU . DivMul

    tPO  décalage et aller à l'état 60
    tNB  décalage et aller à l'état 78
    tID  décalage et aller à l'état 79

    AppelFonction  aller à l'état 80
    DivMul         aller à l'état 102
    Terme          aller à l'état 68


État 91

   46 Calcul: Calcul tADD . DivMul

    tPO  décalage et aller à l'état 60
    tNB  décalage et aller à l'état 78
    tID  décalage et aller à l'état 79

    AppelFonction  aller à l'état 80
    DivMul         aller à l'état 103
    Terme          aller à l'état 68


État 92

   49 DivMul: DivMul tMUL . Terme

    tPO  décalage et aller à l'état 60
    tNB  décalage et aller à l'état 78
    tID  décalage et aller à l'état 79

    AppelFonction  aller à l'état 80
    Terme          aller à l'état 104


État 93

   50 DivMul: DivMul tDIV . Terme

    tPO  décalage et aller à l'état 60
    tNB  décalage et aller à l'état 78
    tID  décalage et aller à l'état 79

    AppelFonction  aller à l'état 80
    Terme          aller à l'état 105


État 94

   27 Affectation: tID tEGAL Valeur tFI .

    $défaut  réduction par utilisation de la règle 27 (Affectation)


État 95

   45 ListeArguments: Valeur tV . ListeArguments

    tPO  décalage et aller à l'état 60
    tNB  décalage et aller à l'état 61
    tID  décalage et aller à l'état 62

    Valeur          aller à l'état 70
    AppelFonction   aller à l'état 65
    ListeArguments  aller à l'état 106
    Calcul          aller à l'état 66
    DivMul          aller à l'état 67
    Terme           aller à l'état 68


État 96

   41 AppelFonction: tID tPO Arguments tPF .

    $défaut  réduction par utilisation de la règle 41 (AppelFonction)


État 97

   18 BodyRet: Body tRETURN Valeur tFI .

    $défaut  réduction par utilisation de la règle 18 (BodyRet)


État 98

   26 Initialisation: tINT tID tEGAL Valeur tFI .

    $défaut  réduction par utilisation de la règle 26 (Initialisation)


État 99

   52 Terme: tPO Calcul tPF .

    $défaut  réduction par utilisation de la règle 52 (Terme)


État 100

   29 Condition: Valeur Comparateur Valeur .

    $défaut  réduction par utilisation de la règle 29 (Condition)


État 101

   28 BrancheIf: tIF tPO Condition tPF tAO . Body tAF BranchesElseif BrancheElse

    tINT  décalage et aller à l'état 29
    tIF   décalage et aller à l'état 30
    tID   décalage et aller à l'état 31

    $défaut  réduction par utilisation de la règle 19 (Body)

    Body            aller à l'état 107
    Declaration     aller à l'état 34
    Initialisation  aller à l'état 35
    Affectation     aller à l'état 36
    BrancheIf       aller à l'état 37
    AppelFonction   aller à l'état 38


État 102

   47 Calcul: Calcul tSOU DivMul .
   49 DivMul: DivMul . tMUL Terme
   50       | DivMul . tDIV Terme

    tMUL  décalage et aller à l'état 92
    tDIV  décalage et aller à l'état 93

    $défaut  réduction par utilisation de la règle 47 (Calcul)


État 103

   46 Calcul: Calcul tADD DivMul .
   49 DivMul: DivMul . tMUL Terme
   50       | DivMul . tDIV Terme

    tMUL  décalage et aller à l'état 92
    tDIV  décalage et aller à l'état 93

    $défaut  réduction par utilisation de la règle 46 (Calcul)


État 104

   49 DivMul: DivMul tMUL Terme .

    $défaut  réduction par utilisation de la règle 49 (DivMul)


État 105

   50 DivMul: DivMul tDIV Terme .

    $défaut  réduction par utilisation de la règle 50 (DivMul)


État 106

   45 ListeArguments: Valeur tV ListeArguments .

    $défaut  réduction par utilisation de la règle 45 (ListeArguments)


État 107

   28 BrancheIf: tIF tPO Condition tPF tAO Body . tAF BranchesElseif BrancheElse

    tAF  décalage et aller à l'état 108


État 108

   28 BrancheIf: tIF tPO Condition tPF tAO Body tAF . BranchesElseif BrancheElse

    tELSEIF  décalage et aller à l'état 109

    $défaut  réduction par utilisation de la règle 39 (BranchesElseif)

    BranchesElseif  aller à l'état 110


État 109

   40 BranchesElseif: tELSEIF . tPO Condition tPF tAO Body tAF BranchesElseif

    tPO  décalage et aller à l'état 111


État 110

   28 BrancheIf: tIF tPO Condition tPF tAO Body tAF BranchesElseif . BrancheElse

    tELSE  décalage et aller à l'état 112

    $défaut  réduction par utilisation de la règle 37 (BrancheElse)

    BrancheElse  aller à l'état 113


État 111

   40 BranchesElseif: tELSEIF tPO . Condition tPF tAO Body tAF BranchesElseif

    tPO  décalage et aller à l'état 60
    tNB  décalage et aller à l'état 61
    tID  décalage et aller à l'état 62

    Valeur         aller à l'état 63
    Condition      aller à l'état 114
    AppelFonction  aller à l'état 65
    Calcul         aller à l'état 66
    DivMul         aller à l'état 67
    Terme          aller à l'état 68


État 112

   38 BrancheElse: tELSE . tAO Body tAF

    tAO  décalage et aller à l'état 115


État 113

   28 BrancheIf: tIF tPO Condition tPF tAO Body tAF BranchesElseif BrancheElse .

    $défaut  réduction par utilisation de la règle 28 (BrancheIf)


État 114
